--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="400dp"
         android:layout_above="@+id/lineIndicatorLayout" />
 
-    <himanshugoel.com.imagescrolling.LineIndicatorLayout
+    <himanshugoel.com.imagescrolling.CircleIndicatorLayout
         android:id="@+id/lineIndicatorLayout"
         android:layout_width="match_parent"
         android:layout_height="40dp"
